# solana-dice-game

./: Anchor.toml  package.json  readme.md
.github/actions/setup/: action.yaml
.github/actions/setup-all/: action.yaml
.github/actions/setup-solana/: action.yaml
.github/actions/setup-ts/: action.yaml
.github/workflows/: localnet-tests.yaml  mi-reusable-tests.yaml  reusable-tests.yml  tests.yaml  tests.yml
programs/solana-dice-game/: Cargo.toml
programs/solana-dice-game/src/: constants.rs  errors.rs  instructions.rs  lib.rs  pda.rs  utils.rs
tests/: orao_vrf_utils.local.ts  solana-dice-game.spec.ts  solana-dice-game.test.ts  solana-dice-game.ts
