[package]
description = "Created with Anchor"
edition = "2021"
name = "solana-dice-game"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_dice_game"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
orao-solana-vrf = {git = "https://github.com/yanCode/solana-vrf.git", branch = "anchor-lang_0.30.1", features = ["cpi"], default-features = false}
anchor-spl = "0.30.1"
